--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -44,6 +44,13 @@ collections:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "about-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
+      - file: "src/pages/settings/index.md"
+        label: "Settings"
+        name: "settings"
+        fields:
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "settings-page"}
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
       - file: "src/pages/products/index.md"
         label: "Products Page"
         name: "products"
