--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -1,9 +1,8 @@
 {
   "homepage": "rubrik",
-  "integritypage": "sida-nummer-2",
   "socialmedia": {
-    "Facebook": "https://www.facebook.com/",
-    "Instagram": "https://www.instagram.com/",
-    "Twitter": "https://www.twitter.com/"
+    "Github": "https://github.com/hallonanton/",
+    "Codepen": "https://codepen.io/hallonanton/",
+    "LinkedIn": "https://www.linkedin.com/in/antonpedersen/"
   }
 }
