FIX: Trying to reset reposiroty to be starter ready

--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -1,5 +1,6 @@
 {
   "homepage": "rubrik",
+  "integritypage": "integritetspolicy",
   "socialmedia": {
     "Github": "https://github.com/hallonanton/",
     "Codepen": "https://codepen.io/hallonanton/",
