FIX: Trying to reset reposiroty to be starter ready

--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "rubrik",
+  "homepage": "hem",
   "integritypage": "integritetspolicy",
   "socialmedia": {
     "Github": "https://github.com/hallonanton/",
