Update Inställningar “general-settings”

--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -1,9 +1,9 @@
 {
-  "homepage": "hem",
-  "integritypage": "integritetspolicy",
+  "homepage": "Hem",
+  "integritypage": "Integritetspolicy",
   "socialmedia": {
-    "Github": "https://github.com/hallonanton/",
+    "LinkedIn": "https://www.linkedin.com/in/antonpedersen/",
     "Codepen": "https://codepen.io/hallonanton/",
-    "LinkedIn": "https://www.linkedin.com/in/antonpedersen/"
+    "Github": "https://github.com/hallonanton/"
   }
 }
