FIX: Reset to functional starter

--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "hem",
-  "integritypage": "integritetspolicy",
+	"homepage" : "Hem",
+	"integritypage" : "Integritetspolicy",
   "socialmedia": {
     "Github": "https://github.com/hallonanton/",
     "Codepen": "https://codepen.io/hallonanton/",
